syntax = "proto3";
package com.lambda.hrpc.protocol.test.entity;

message MyAppInvocation {
  string name = 1;
  int32 age = 2;
}